test to solve small jump on mobile navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,7 @@
+.navbar-menu-container {
+  display: contents;
+}
+
 .navbar {
   z-index: 10;
   width: 100%;
